--- a/.github/workflows/deploy-test.yaml
+++ b/.github/workflows/deploy-test.yaml
@@ -4,12 +4,7 @@ on:
   workflow_dispatch:
   pull_request:
     types: [closed]
-    branches: [release/*]
-    paths:
-      - "core-services/applicant-service/**"
-      - "core-services/clinic-service/**"
-      - "core-services/lambda-authoriser/**"
-      - "pets-ui/**"
+    branches: [develop]
 
 jobs:
   deploy:
