Change coverage on SonarQube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,4 @@ sonar.sources=pets-ui/src, pets-core-services/src
 sonar.tests=pets-ui/src, pets-core-services/src
 sonar.test.inclusions=**/*.test.ts, **/*.test.tsx, cypress/e2e/**, **/*.spec.ts
 sonar.javascript.lcov.reportPaths=pets-ui/coverage/lcov.info, pets-core-services/coverage/lcov.info
+sonar.coverage.exclusions=pets-ui/src/components/certificateTemplate/certificateTemplate.tsx
