TBBETA-1137 Certificate print page (#491)
* Certificate print page

* Remove  footer link meant for TBBETA-155

* Update the pnpm-lock file

* Updating the Certificate

* Remove cat placeholders no longer needed

* Implementing requested changes and fixing testing

* Update pnpm-lock

* Fix this test as I added the clinic used that my account was assigned to

* fix ci issues

* update pnpm lock file

* Add new clinic for testing

* TBBETA-1112: fix the aws sdk to v3 (#515)

* Remove download button

* Fix test

* Fix SonarQube issues

* Attempt at fixing pnpm-lock

* Fix print button behaviour

* Restore pdf preview styles

* Fix missing comma

* Change coverage on SonarQube

* fix for review comments

---------

Co-authored-by: jasnave-ukhsa <jasnave.pinto@ukhsa.gov.uk>

--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -24,6 +24,7 @@
     "@aws-sdk/client-sqs": "^3.864.0",
     "@azure/msal-browser": "^4.21.0",
     "@azure/msal-react": "^3.0.19",
+    "@react-pdf/renderer": "^4.3.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/swagger-ui-react": "^5.18.0",
     "axios": "^1.8.3",
