--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,9 +2,9 @@ name: Pets CI
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main, develop, release/**]
   pull_request:
-    branches: [main, develop]
+    branches: [main, develop, release/**]
 
   workflow_dispatch:
 
