--- a/.github/workflows/deploy-test.yaml
+++ b/.github/workflows/deploy-test.yaml
@@ -2,14 +2,9 @@ name: Pets Deployment - Test
 
 on:
   workflow_dispatch:
-  pull_request:
-    types: [closed]
-    branches: [release/*]
-    paths:
-      - "core-services/applicant-service/**"
-      - "core-services/clinic-service/**"
-      - "core-services/lambda-authoriser/**"
-      - "pets-ui/**"
+  push:
+    branches:
+      - develop
 
 jobs:
   deploy:
