--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -24,6 +24,7 @@
     "@aws-sdk/client-sqs": "^3.864.0",
     "@azure/msal-browser": "^4.21.0",
     "@azure/msal-react": "^3.0.19",
+    "@react-pdf/renderer": "^4.3.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/swagger-ui-react": "^5.18.0",
     "axios": "^1.8.3",
@@ -39,7 +40,7 @@
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
     "sass": "^1.81.0",
-    "swagger-ui-react": "^5.27.1"
+    "swagger-ui-react": "^5.28.0"
   },
   "devDependencies": {
     "@redux-devtools/core": "^4.1.1",
