--- a/.github/workflows/consolidatedReportsDashboard.yaml
+++ b/.github/workflows/consolidatedReportsDashboard.yaml
@@ -1,4 +1,3 @@
-# .github/workflows/nightly-dashboard.yml
 name: Nightly Tests Dashboard
 
 on:
@@ -87,32 +86,140 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Download artifacts from DEV workflow
+      - name: Download artifacts using GitHub API
         continue-on-error: true
-        uses: dawidd6/action-download-artifact@v3
+        uses: actions/github-script@v7
         with:
-          workflow: nightlyCypressTests-DEV.yaml
-          name_is_regexp: true
-          name: dev-.*-results
-          path: artifacts/dev/
+          script: |
+            const fs = require('fs');
+            const path = require('path');
+            
+            // Create artifacts directory
+            const artifactsDir = './artifacts';
+            if (!fs.existsSync(artifactsDir)) {
+              fs.mkdirSync(artifactsDir, { recursive: true });
+            }
+            
+            // Workflow names and their corresponding environment prefixes
+            const workflowMappings = {
+              'nightlyCypressTests-DEV.yaml': 'dev',
+              'nightlyCypressTests-QAT.yaml': 'qat', 
+              'nightlyCypressTests-Preprod.yaml': 'preprod'
+            };
+            
+            const environments = ['dev', 'qat', 'preprod'];
+            const browsers = ['chrome', 'edge'];
+            
+            // Function to download and extract artifact
+            async function downloadArtifact(artifactId, downloadPath) {
+              try {
+                const download = await github.rest.actions.downloadArtifact({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  artifact_id: artifactId,
+                  archive_format: 'zip'
+                });
+                
+                // Write the zip file
+                const zipPath = `${downloadPath}.zip`;
+                fs.writeFileSync(zipPath, Buffer.from(download.data));
+                
+                // Extract zip using Node.js (basic extraction)
+                const AdmZip = require('adm-zip');
+                const zip = new AdmZip(zipPath);
+                zip.extractAllTo(downloadPath, true);
+                
+                // Clean up zip file
+                fs.unlinkSync(zipPath);
+                
+                console.log(`Downloaded and extracted artifact to: ${downloadPath}`);
+                return true;
+              } catch (error) {
+                console.error(`Failed to download artifact ${artifactId}:`, error.message);
+                return false;
+              }
+            }
+            
+            // Get recent workflow runs for each environment
+            for (const [workflowFile, env] of Object.entries(workflowMappings)) {
+              console.log(`Processing ${env} environment (${workflowFile})...`);
+              
+              try {
+                // Get recent workflow runs
+                const { data: runs } = await github.rest.actions.listWorkflowRuns({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  workflow_id: workflowFile,
+                  status: 'completed',
+                  per_page: 10
+                });
+                
+                // Find the most recent run from the last 24 hours
+                const yesterday = new Date(Date.now() - 24 * 60 * 60 * 1000);
+                const recentRun = runs.workflow_runs.find(run => 
+                  new Date(run.created_at) >= yesterday
+                );
+                
+                if (!recentRun) {
+                  console.log(`No recent workflow runs found for ${env}`);
+                  continue;
+                }
+                
+                console.log(`Found recent run for ${env}: ${recentRun.id} (${recentRun.conclusion})`);
+                
+                // Get artifacts for this run
+                const { data: artifacts } = await github.rest.actions.listWorkflowRunArtifacts({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  run_id: recentRun.id
+                });
+                
+                // Create environment directory
+                const envDir = path.join(artifactsDir, env);
+                if (!fs.existsSync(envDir)) {
+                  fs.mkdirSync(envDir, { recursive: true });
+                }
+                
+                // Download artifacts matching our pattern
+                for (const artifact of artifacts.artifacts) {
+                  const artifactName = artifact.name;
+                  
+                  // Check if this artifact matches our expected patterns
+                  for (const browser of browsers) {
+                    if (artifactName.includes(`${env}-${browser}-results`)) {
+                      console.log(`Downloading artifact: ${artifactName}`);
+                      const downloadPath = path.join(envDir, artifactName);
+                      await downloadArtifact(artifact.id, downloadPath);
+                      break;
+                    }
+                  }
+                }
+                
+              } catch (error) {
+                console.error(`Error processing ${env} environment:`, error.message);
+              }
+            }
+            
+            // List what we've downloaded for debugging
+            console.log('\nDownloaded artifacts structure:');
+            function listDir(dir, prefix = '') {
+              if (fs.existsSync(dir)) {
+                const items = fs.readdirSync(dir);
+                for (const item of items) {
+                  const itemPath = path.join(dir, item);
+                  const stat = fs.statSync(itemPath);
+                  console.log(`${prefix}${item}${stat.isDirectory() ? '/' : ''}`);
+                  if (stat.isDirectory()) {
+                    listDir(itemPath, prefix + '  ');
+                  }
+                }
+              }
+            }
+            listDir(artifactsDir);
 
-      - name: Download artifacts from QAT workflow
-        continue-on-error: true
-        uses: dawidd6/action-download-artifact@v3
-        with:
-          workflow: nightlyCypressTests-QAT.yaml
-          name_is_regexp: true
-          name: qat-.*-results
-          path: artifacts/qat/
-
-      - name: Download artifacts from PREPROD workflow
-        continue-on-error: true
-        uses: dawidd6/action-download-artifact@v3
-        with:
-          workflow: nightlyCypressTests-Preprod.yaml
-          name_is_regexp: true
-          name: preprod-.*-results
-          path: artifacts/preprod/
+      - name: Install required dependencies for artifact extraction
+        run: |
+          npm install adm-zip
 
       - name: Generate consolidated test results
         id: results
@@ -256,7 +363,7 @@ jobs:
                           
                           let environmentTable = '<table><tr><th>Browser</th><th>DEV</th><th>QAT</th><th>PREPROD</th></tr>';
                           
-                          ['chrome', 'edge', 'safari'].forEach(browser => {
+                          ['chrome', 'edge'].forEach(browser => {
                               const capitalizedBrowser = browser.charAt(0).toUpperCase() + browser.slice(1);
                               environmentTable += `<tr>
                                   <td><strong>${capitalizedBrowser}</strong></td>
