--- a/.github/workflows/consolidatedReportsDashboard.yaml
+++ b/.github/workflows/consolidatedReportsDashboard.yaml
@@ -10,6 +10,7 @@ permissions:
   contents: read
   pages: write
   id-token: write
+  actions: read
 
 jobs:
   wait-for-all-workflows:
@@ -20,6 +21,7 @@ jobs:
         id: check-completion
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}  # Added: Explicitly specify token
           script: |
             const { owner, repo } = context.repo;
             const workflows = ['Nightly Cypress Tests - DEV', 'Nightly Cypress Tests - QAT', 'Nightly Cypress Tests - PREPROD'];
@@ -35,26 +37,31 @@ jobs:
               const results = {};
               
               for (const workflowName of workflows) {
-                // Get the latest run for each workflow
-                const { data: runs } = await github.rest.actions.listWorkflowRunsForRepo({
-                  owner,
-                  repo,
-                  event: 'schedule', // Only scheduled runs
-                  status: 'completed',
-                  per_page: 1
-                });
-                
-                const latestRun = runs.workflow_runs.find(run => 
-                  run.name === workflowName && 
-                  run.created_at >= new Date(Date.now() - 24 * 60 * 60 * 1000).toISOString() // Within last 24 hours
-                );
-                
-                if (!latestRun) {
-                  console.log(`${workflowName}: No recent completed run found`);
+                try {
+                  // Get the latest run for each workflow
+                  const { data: runs } = await github.rest.actions.listWorkflowRunsForRepo({
+                    owner,
+                    repo,
+                    event: 'schedule', // Only scheduled runs
+                    status: 'completed',
+                    per_page: 10  // Increased from 1 to get more options
+                  });
+                  
+                  const latestRun = runs.workflow_runs.find(run => 
+                    run.name === workflowName && 
+                    run.created_at >= new Date(Date.now() - 24 * 60 * 60 * 1000).toISOString() // Within last 24 hours
+                  );
+                  
+                  if (!latestRun) {
+                    console.log(`${workflowName}: No recent completed run found`);
+                    allComplete = false;
+                  } else {
+                    console.log(`${workflowName}: ${latestRun.conclusion} (${latestRun.created_at})`);
+                    results[workflowName] = latestRun.conclusion;
+                  }
+                } catch (error) {
+                  console.error(`Error checking ${workflowName}:`, error.message);
                   allComplete = false;
-                } else {
-                  console.log(`${workflowName}: ${latestRun.conclusion} (${latestRun.created_at})`);
-                  results[workflowName] = latestRun.conclusion;
                 }
               }
               
@@ -86,13 +93,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install required dependencies for artifact extraction
+        run: |
+          npm install adm-zip
+
       - name: Download artifacts using GitHub API
         continue-on-error: true
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }} 
           script: |
             const fs = require('fs');
             const path = require('path');
+            const AdmZip = require('adm-zip');  
             
             // Create artifacts directory
             const artifactsDir = './artifacts';
@@ -100,7 +113,7 @@ jobs:
               fs.mkdirSync(artifactsDir, { recursive: true });
             }
             
-            // Workflow names and their corresponding environment prefixes
+            // Workflow file names as they appear in CI/CD
             const workflowMappings = {
               'nightlyCypressTests-DEV.yaml': 'dev',
               'nightlyCypressTests-QAT.yaml': 'qat', 
@@ -108,7 +121,7 @@ jobs:
             };
             
             const environments = ['dev', 'qat', 'preprod'];
-            const browsers = ['chrome', 'edge'];
+            const browsers = ['chrome', 'edge', 'firefox'];
             
             // Function to download and extract artifact
             async function downloadArtifact(artifactId, downloadPath) {
@@ -124,8 +137,7 @@ jobs:
                 const zipPath = `${downloadPath}.zip`;
                 fs.writeFileSync(zipPath, Buffer.from(download.data));
                 
-                // Extract zip using Node.js (basic extraction)
-                const AdmZip = require('adm-zip');
+                // Extract zip using AdmZip
                 const zip = new AdmZip(zipPath);
                 zip.extractAllTo(downloadPath, true);
                 
@@ -217,10 +229,6 @@ jobs:
             }
             listDir(artifactsDir);
 
-      - name: Install required dependencies for artifact extraction
-        run: |
-          npm install adm-zip
-
       - name: Generate consolidated test results
         id: results
         run: |
@@ -229,10 +237,10 @@ jobs:
           echo "Processing test results..."
           
           ENVIRONMENTS=("dev" "qat" "preprod")
-          BROWSERS=("chrome" "edge")
+          BROWSERS=("chrome" "edge" "firefox")
           
           # Initialize counters
-          TOTAL_COMBINATIONS=6
+          TOTAL_COMBINATIONS=9
           FAILED_COMBINATIONS=0
           TOTAL_FAILED_TESTS=0
           
