--- a/.github/workflows/nightlyCypressTests.yaml
+++ b/.github/workflows/nightlyCypressTests.yaml
@@ -1,8 +1,7 @@
 name: Nightly Cypress Tests
 on:
  schedule:
-   - cron: "0 1 * * 1-5" # 01:00 UTC weekdays
- workflow_dispatch:
+   - cron: "0 1 * * 1-5"
 jobs:
  cypress-tests:
    name: ${{ matrix.env.name }} - ${{ matrix.browser }}
