--- a/.github/workflows/nightlyCypressTests.yaml
+++ b/.github/workflows/nightlyCypressTests.yaml
@@ -1,135 +1,208 @@
 name: Nightly Cypress Tests
 on:
- schedule:
-   - cron: "0 1 * * 1-5"
+  schedule:
+    - cron: "0 1 * * 1-5"
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: "Environment to run tests against"
+        required: true
+        default: "qat"
+        type: choice
+        options: [dev, qat, preprod]
+      browser:
+        description: "Browser to run Cypress on"
+        required: false
+        default: "chrome"
+        type: choice
+        options: [chrome, firefox, edge]
+
 jobs:
- cypress-tests:
-   name: ${{ matrix.env.name }} - ${{ matrix.browser }}
-   runs-on: ubuntu-latest
-   strategy:
-     fail-fast: false
-     matrix:
-       browser: [chrome, edge, firefox]
-       env:
-         - name: dev
-           url: https://clinics.dev.pets.ukhsa.gov.uk
-         - name: qat
-           url: https://clinics.test.pets.ukhsa.gov.uk
-         - name: preprod
-           url: https://clinics.preprod.pets.ukhsa.gov.uk
-   env:
-     USER_1_EMAIL: ${{ secrets.USER_1_EMAIL }}
-     USER_1_PASSWORD: ${{ secrets.USER_1_PASSWORD }}
-     USER_2_EMAIL: ${{ secrets.USER_2_EMAIL }}
-     USER_2_PASSWORD: ${{ secrets.USER_2_PASSWORD }}
-     USER_3_EMAIL: ${{ secrets.USER_3_EMAIL }}
-     USER_3_PASSWORD: ${{ secrets.USER_3_PASSWORD }}
-     USER_4_EMAIL: ${{ secrets.USER_4_EMAIL }}
-     USER_4_PASSWORD: ${{ secrets.USER_4_PASSWORD }}
-     USER_5_EMAIL: ${{ secrets.USER_5_EMAIL }}
-     USER_5_PASSWORD: ${{ secrets.USER_5_PASSWORD }}
-     USER_6_EMAIL: ${{ secrets.USER_6_EMAIL }}
-     USER_6_PASSWORD: ${{ secrets.USER_6_PASSWORD }}
-     ENVIRONMENT: ${{ matrix.env.name }}
-     CYPRESS_BASE_URL: ${{ matrix.env.url }}
-   steps:
-     - name: Checkout code
-       uses: actions/checkout@v4
-     - name: Install pnpm
-       uses: pnpm/action-setup@v4
-     - name: Setup Node.js
-       uses: actions/setup-node@v4
-       with:
-         node-version: 18.x
-         cache: "pnpm"
-     - name: Install dependencies
-       run: pnpm i
-     - name: Cache Cypress binary
-       id: cache-cypress-binary
-       uses: actions/cache@v4
-       with:
-         path: ~/.cache/Cypress
-         key: cypress-binary-${{ runner.os }}-${{ hashFiles('pets-ui/package.json') }}
-     - name: Install Cypress Binary
-       if: steps.cache-cypress-binary.outputs.cache-hit != 'true'
-       run: |
-         pnpm exec cypress install --force
-         pnpm exec cypress verify
-       working-directory: pets-ui
-     - name: Cypress run tests (first attempt)
-       uses: cypress-io/github-action@v6
-       id: initial_attempt
-       continue-on-error: true
-       with:
-         install: false
-         working-directory: pets-ui
-         browser: ${{ matrix.browser }}
-         config-file: cypress/cypress.config.mjs
-         config: baseUrl=${{ matrix.env.url }},reporter=mochawesome,reporterOptions.reportDir=cypress/results/${{ matrix.env.name }}-${{ matrix.browser }},reporterOptions.overwrite=false,reporterOptions.html=false,reporterOptions.json=true
-     - name: Cypress run tests (retry if failed)
-       if: steps.initial_attempt.outcome != 'success'
-       uses: cypress-io/github-action@v6
-       id: retry_attempt
-       with:
-         install: false
-         working-directory: pets-ui
-         browser: ${{ matrix.browser }}
-         config-file: cypress/cypress.config.mjs
-         config: baseUrl=${{ matrix.env.url }},reporter=mochawesome,reporterOptions.reportDir=cypress/results/${{ matrix.env.name }}-${{ matrix.browser }}-retry,reporterOptions.overwrite=false,reporterOptions.html=false,reporterOptions.json=true
-     - name: Upload Screenshots
-       if: failure()
-       uses: actions/upload-artifact@v4
-       with:
-         name: screenshots-${{ matrix.env.name }}-${{ matrix.browser }}
-         path: pets-ui/cypress/screenshots
-         retention-days: 7
-         if-no-files-found: ignore
-     - name: Upload Videos
-       if: always()
-       uses: actions/upload-artifact@v4
-       with:
-         name: videos-${{ matrix.env.name }}-${{ matrix.browser }}
-         path: pets-ui/cypress/videos
-         retention-days: 7
-         if-no-files-found: ignore
-     - name: Upload Test Results (Mochawesome)
-       if: always()
-       uses: actions/upload-artifact@v4
-       with:
-         name: results-${{ matrix.env.name }}-${{ matrix.browser }}
-         path: pets-ui/cypress/results
-         retention-days: 7
-         if-no-files-found: ignore
- generate-dashboard:
-   needs: cypress-tests
-   if: always()
-   runs-on: ubuntu-latest
-   steps:
-     - name: Download all artifacts
-       uses: actions/download-artifact@v4
-       with:
-         path: all-results
-     - name: Install report tools
-       run: |
-         npm install -g mochawesome-merge mochawesome-report-generator jq
-     - name: Merge mochawesome reports
-       run: |
-         if find all-results -name "*.json" -type f | grep -q .; then
-           mochawesome-merge "all-results/**/*.json" > mochawesome.json
-           marge mochawesome.json -f index -o dashboard --reportTitle "🌙 Pre-entry TB Screening - Nightly Cypress Test Results"
-         else
-           echo "No test reports found, creating empty dashboard"
-           mkdir -p dashboard
-           echo "<h1>No test results available</h1>" > dashboard/index.html
-         fi
-     - name: Upload Dashboard as Artifact
-       uses: actions/upload-artifact@v4
-       with:
-         name: nightly-dashboard
-         path: dashboard
-         retention-days: 7
-     - name: Deploy Dashboard to GitHub Pages
-       uses: peaceiris/actions-gh-pages@v3
-       with:
-         github_token: ${{ secrets.GITHUB_TOKEN }}
-         publish_dir: dashboard
+  setup:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - name: Set up test matrix
+        id: set-matrix
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            # Manual dispatch - use selected inputs
+            ENV="${{ github.event.inputs.environment }}"
+            BROWSER="${{ github.event.inputs.browser }}"
+            
+            # Set URL based on environment using our constants
+            case $ENV in
+              "dev")
+                URL="https://clinics.dev.pets.ukhsa.gov.uk"
+                ;;
+              "qat")
+                URL="https://clinics.test.pets.ukhsa.gov.uk"
+                ;;
+              "preprod")
+                URL="https://clinics.preprod.pets.ukhsa.gov.uk"
+                ;;
+              *)
+                URL="http://localhost:3000"
+                ;;
+            esac
+            
+            # Create matrix with single environment and browser
+            MATRIX=$(cat <<EOF
+          {
+            "include": [
+              {
+                "env_name": "$ENV",
+                "env_url": "$URL",
+                "browser": "$BROWSER"
+              }
+            ]
+          }
+          EOF
+            )
+          else
+            # Scheduled run - test all environments and browsers
+            # Generate all combinations programmatically
+            ENVS=("dev" "qat" "preprod")
+            ENV_URLS=("https://clinics.dev.pets.ukhsa.gov.uk" "https://clinics.test.pets.ukhsa.gov.uk" "https://clinics.preprod.pets.ukhsa.gov.uk")
+            BROWSERS=("chrome" "firefox" "edge")
+            
+            MATRIX='{"include":['
+            FIRST=true
+            
+            for i in "${!ENVS[@]}"; do
+              for BROWSER in "${BROWSERS[@]}"; do
+                if [ "$FIRST" = true ]; then
+                  FIRST=false
+                else
+                  MATRIX="$MATRIX,"
+                fi
+                MATRIX="$MATRIX{\"env_name\":\"${ENVS[$i]}\",\"env_url\":\"${ENV_URLS[$i]}\",\"browser\":\"$BROWSER\"}"
+              done
+            done
+            
+            MATRIX="$MATRIX]}"
+          fi
+          
+          # Output the matrix
+          echo "matrix=$MATRIX" >> $GITHUB_OUTPUT
+
+  cypress-tests:
+    needs: setup
+    name: ${{ matrix.env_name }} - ${{ matrix.browser }}
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJSON(needs.setup.outputs.matrix) }}
+    env:
+      CI: true
+      USER_1_EMAIL: ${{ secrets.USER_1_EMAIL }}
+      USER_1_PASSWORD: ${{ secrets.USER_1_PASSWORD }}
+      USER_2_EMAIL: ${{ secrets.USER_2_EMAIL }}
+      USER_2_PASSWORD: ${{ secrets.USER_2_PASSWORD }}
+      USER_3_EMAIL: ${{ secrets.USER_3_EMAIL }}
+      USER_3_PASSWORD: ${{ secrets.USER_3_PASSWORD }}
+      USER_4_EMAIL: ${{ secrets.USER_4_EMAIL }}
+      USER_4_PASSWORD: ${{ secrets.USER_4_PASSWORD }}
+      USER_5_EMAIL: ${{ secrets.USER_5_EMAIL }}
+      USER_5_PASSWORD: ${{ secrets.USER_5_PASSWORD }}
+      USER_6_EMAIL: ${{ secrets.USER_6_EMAIL }}
+      USER_6_PASSWORD: ${{ secrets.USER_6_PASSWORD }}
+      ENVIRONMENT: ${{ matrix.env_name }}
+      CYPRESS_BASE_URL: ${{ matrix.env_url }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18.x
+          cache: "pnpm"
+      - name: Install dependencies
+        run: pnpm i
+      - name: Cache Cypress binary
+        id: cache-cypress-binary
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/Cypress
+          key: cypress-binary-${{ runner.os }}-${{ hashFiles('pets-ui/package.json') }}
+      - name: Install Cypress Binary
+        if: steps.cache-cypress-binary.outputs.cache-hit != 'true'
+        run: |
+          pnpm exec cypress install --force
+          pnpm exec cypress verify
+        working-directory: pets-ui
+      - name: Cypress run tests (first attempt)
+        uses: cypress-io/github-action@v6
+        id: initial_attempt
+        continue-on-error: true
+        with:
+          install: false
+          working-directory: pets-ui
+          browser: ${{ matrix.browser }}
+          config-file: cypress/cypress.config.mjs
+          config: baseUrl=${{ matrix.env_url }},reporter=mochawesome,reporterOptions.reportDir=cypress/results/${{ matrix.env_name }}-${{ matrix.browser }},reporterOptions.overwrite=false,reporterOptions.html=false,reporterOptions.json=true
+      - name: Cypress run tests (retry if failed)
+        if: steps.initial_attempt.outcome != 'success'
+        uses: cypress-io/github-action@v6
+        id: retry_attempt
+        with:
+          install: false
+          working-directory: pets-ui
+          browser: ${{ matrix.browser }}
+          config-file: cypress/cypress.config.mjs
+          config: baseUrl=${{ matrix.env_url }},reporter=mochawesome,reporterOptions.reportDir=cypress/results/${{ matrix.env_name }}-${{ matrix.browser }}-retry,reporterOptions.overwrite=false,reporterOptions.html=false,reporterOptions.json=true
+      - name: Upload Screenshots
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: screenshots-${{ matrix.env_name }}-${{ matrix.browser }}
+          path: pets-ui/cypress/screenshots
+          retention-days: 7
+          if-no-files-found: ignore
+      - name: Upload Videos
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: videos-${{ matrix.env_name }}-${{ matrix.browser }}
+          path: pets-ui/cypress/videos
+          retention-days: 7
+          if-no-files-found: ignore
+      - name: Upload Test Results (Mochawesome)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: results-${{ matrix.env_name }}-${{ matrix.browser }}
+          path: pets-ui/cypress/results
+          retention-days: 7
+          if-no-files-found: ignore
+
+  generate-dashboard:
+    needs: cypress-tests
+    if: always()
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: all-results
+      - name: Install report tools
+        run: |
+          npm install -g mochawesome-merge mochawesome-report-generator jq
+      - name: Merge mochawesome reports
+        run: |
+          mochawesome-merge all-results/**/mochawesome*.json > mochawesome.json
+          marge mochawesome.json -f index -o dashboard --reportTitle "🌙 Pre-entry TB Screening - Nightly Cypress Test Results"
+      - name: Upload Dashboard as Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: nightly-dashboard
+          path: dashboard
+          retention-days: 7
+      - name: Deploy Dashboard to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: dashboard
