--- a/pets-ui/package.json
+++ b/pets-ui/package.json
@@ -29,6 +29,7 @@
     "@types/swagger-ui-react": "^5.18.0",
     "axios": "^1.8.3",
     "dicom-parser": "^1.8.21",
+    "glob": "^11.0.3",
     "govuk-frontend": "^5.7.1",
     "msal-react-tester": "^0.3.1",
     "react": "^19.1.1",
