--- a/.github/workflows/nightlyCypressTests.yaml
+++ b/.github/workflows/nightlyCypressTests.yaml
@@ -133,6 +133,10 @@ jobs:
           pnpm exec cypress verify
         working-directory: pets-ui
 
+      - name: Start Local Environment
+        run: |
+          pnpm start & sleep 120
+
       - name: Cypress run tests
         uses: cypress-io/github-action@v6
         continue-on-error: true
