update report job to succeed even if some tests fail.

--- a/.github/workflows/nightlyCypressTests.yaml
+++ b/.github/workflows/nightlyCypressTests.yaml
@@ -439,6 +439,6 @@ jobs:
           if [[ "${{ steps.summary.outputs.status }}" == "PASS" ]]; then
             echo "::notice::✅ All tests passed! Dashboard updated at ${{ steps.deployment.outputs.page_url }}"
           else
-            echo "::error::❌ Some tests failed. Check dashboard: ${{ steps.deployment.outputs.page_url }}"
-            exit 1
+            echo "::warning::⚠️ Some tests failed. Check dashboard: ${{ steps.deployment.outputs.page_url }}"
+            # No exit 1, so workflow always succeeds
           fi
